--- a/complete/user/pom.xml
+++ b/complete/user/pom.xml
@@ -45,7 +45,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Brixton.BUILD-SNAPSHOT</version>
+        <version>Camden.SR4</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
