--- a/initial/user/build.gradle
+++ b/initial/user/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.BUILD-SNAPSHOT" 
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Camden.SR4" 
 	}
 }
 
