--- a/complete/say-hello/build.gradle
+++ b/complete/say-hello/build.gradle
@@ -4,20 +4,52 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		maven { url "http://repo.spring.io/release" }
+		maven { url "http://repo.spring.io/milestone" }
+		maven { url "http://repo.spring.io/snapshot" }
+		maven { url 'https://repo.spring.io/libs-snapshot' }
+		maven { url "http://m2.neo4j.org/content/repositories/releases/" }
+		maven { url "http://dl.bintray.com/populov/maven" }
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		// tag::build[]
+		classpath('se.transmode.gradle:gradle-docker:1.2')
+		// end::build[]
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot' 
+apply plugin: 'org.springframework.boot'
+
+
+// tag::plugin[]
+apply plugin: 'docker'
+// end::plugin[]
+
+// This is used as the docker image prefix (org)
+group = 'ssevening'
 
 jar {
-	baseName = 'say-hello'
-	version = '0.0.1-SNAPSHOT'
+	baseName = 'gs-spring-boot-load-banlanceing-say-hello'
+	version = '0.1.0'
 }
+
+
+// tag::task[]
+task buildDocker(type: Docker, dependsOn: build) {
+	applicationName = jar.baseName
+	dockerfile = file('Dockerfile')
+	doFirst {
+		copy {
+			from jar
+			into "${stageDir}/target"
+		}
+	}
+}
+// end::task[]
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
